--- a/tsconfig.json
+++ b/tsconfig.json
@@ -9,8 +9,8 @@
     "sourceMap": true,
     "strict": true,
     "target": "es2017",
+    "lib": ["es2019"],
     "forceConsistentCasingInFileNames": true,
-    "lib": ["es2019"]
   },
   "compileOnSave": true,
   "include": ["src/**/*"],
