--- a/package.json
+++ b/package.json
@@ -28,8 +28,10 @@
   },
   "homepage": "https://github.com/Chidinma21/Vending-Machine-API#readme",
   "devDependencies": {
+    "@types/bcrypt": "^5.0.2",
     "@types/cors": "^2.8.13",
     "@types/express": "^4.17.17",
+    "@types/jsonwebtoken": "^9.0.5",
     "@types/morgan": "^1.9.4",
     "@types/node": "^18.15.11",
     "@types/passport": "^1.0.12",
@@ -47,12 +49,14 @@
     "typescript": "^5.0.3"
   },
   "dependencies": {
+    "bcrypt": "^5.1.1",
     "cors": "^2.8.5",
     "dotenv": "^16.0.3",
     "express": "^4.18.2",
     "helmet": "^6.0.1",
     "http-status": "^1.6.2",
     "joi": "^17.9.1",
+    "jsonwebtoken": "^9.0.2",
     "mongoose": "^5.9.4",
     "morgan": "^1.10.0",
     "passport": "^0.6.0",
