--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "tslint": "tslint --project tsconfig.json",
     "lint": "eslint \"src/**/*.ts\"",
     "lint-and-fix": "eslint \"src/**/*.ts\" --fix",
+    "prebuild": "npm install",
     "build": "rm -rf ./build && tsc",
     "prettier": "prettier --config .prettierrc 'src/**/*.ts' --write",
     "start": "ts-node --files src/index.ts",
